--- a/CLAM/plugins/spacialization/SConstruct
+++ b/CLAM/plugins/spacialization/SConstruct
@@ -38,6 +38,7 @@ env.EnableClamModules([
 
 sourcePaths = ["src"]
 sources = scanFiles('*.cxx', sourcePaths)
+print sources
 sources = dict.fromkeys(sources).keys()
 if sys.platform=='linux2' :
 	env.Append( CCFLAGS=['-g','-O3','-Wall'] )
