--- a/CLAM/plugins/spacialization/SConstruct
+++ b/CLAM/plugins/spacialization/SConstruct
@@ -39,6 +39,7 @@ env.EnableClamModules([
 sourcePaths = ["src"]
 sources = scanFiles('*.cxx', sourcePaths)
 print sources
+print glob.glob("*.*")
 sources = dict.fromkeys(sources).keys()
 if sys.platform=='linux2' :
 	env.Append( CCFLAGS=['-g','-O3','-Wall'] )
