* NetworkEditor/SConstruct: install also the OfflinePlayer manpage

--- a/NetworkEditor/SConstruct
+++ b/NetworkEditor/SConstruct
@@ -206,6 +206,7 @@ qtplugin = env.SharedLibrary("CLAMWidgets", pluginsources + env.Qrc(qrcfiles))
 manpages = [
 	'resources/man/man1/NetworkEditor.1',
 	'resources/man/man1/Prototyper.1',
+	'resources/man/man1/OfflinePlayer.1',
 	]
 
 tsfiles = scanFiles("*.ts", ["src/i18n/"])
