--- a/trunk/packaging/Annotator/debian/control
+++ b/trunk/packaging/Annotator/debian/control
@@ -3,12 +3,12 @@ Section: sound
 Priority: optional
 Maintainer: CLAM Team <developers@clam-project.org>
 Homepage: http://clam-project.org
-Build-Depends: debhelper (>= 5.0.0), scons, libclam-dev, qt4-dev-tools, libqt4-dev, libqt4-dev (<4.4) | libqt4-opengl-dev, docbook-to-man, imagemagick, python
+Build-Depends: debhelper (>= 5.0.0), scons, libclam-dev, qt4-dev-tools, libqt4-dev, libqt4-dev (<4.4) | libqt4-opengl-dev, docbook-to-man, imagemagick
 Standards-Version: 3.8.0
 
 Package: clam-annotator
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, python
 Recommends: clam-annotator-examples (= ${source:Version} )
 Description: CLAM audio annotation tool
  The CLAM Annotator is a tool to visualize, check and modify music
