--- a/packaging/CLAM/debian/control
+++ b/packaging/CLAM/debian/control
@@ -5,8 +5,8 @@ Maintainer: CLAM Team <developers@clam-project.org>
 Build-Depends: debhelper (>= 5.0.0), scons, ladspa-sdk, libxerces-c2-dev, portaudio19-dev, libfftw3-dev | fftw3-dev, libjack-dev, libmad0-dev, libogg-dev, libsndfile1-dev, libvorbis-dev, libid3-3.8.3-dev, libasound2-dev, liblo0-dev, doxygen
 Standards-Version: 3.8.0
 Homepage: http://clam-project.org/
-Vcs-Browser: https://clam-project.org/clam/trunk/CLAM
-Vcs-Svn: https://clam-project.org/clam/trunk/CLAM
+Vcs-Browser: https://clam-project.org/clam/trunk/packaging/CLAM/debian
+Vcs-Svn: https://clam-project.org/clam/trunk/packaging/CLAM/debian
 
 Package: libclam13
 Section: libs
