--- a/CLAM/plugins/spacialization/SConstruct
+++ b/CLAM/plugins/spacialization/SConstruct
@@ -15,7 +15,8 @@ options.Add(PathOption('clam_prefix', 'The prefix where CLAM was installed', '')
 options.Add(PathOption('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', "", validator=PathOption.PathAccept))
 options.Add(PathOption('sandbox_path', 'Path where third party libraries were installed (in windows)', "", validator=PathOption.PathAccept))
 options.Add(BoolOption('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
-options.Add(BoolOption('raytracing', 'Linking with Barcelona Media raytracing (not GPL)', 'no') )
+options.Add(EnumOption('raytracing', 'Linking with Barcelona Media raytracing (not GPL)', 'convergent',
+	allowed_values= ('convergent', 'traditional') ) )
 
 toolChain = 'default'
 if sys.platform == "win32": toolChain = 'mingw'
@@ -60,9 +61,15 @@ if sys.platform=="win32" or 'crossmingw' in env['TOOLS'] :
 env.Append( LIBS=['fftw3'] )
 env.AppendUnique(CPPPATH=sourcePaths)
 
-if env['raytracing'] :
+if env['raytracing']=='traditional' :
+	print 'linking with traditional raytracing'
 	env.Append(CPPPATH=[os.path.join('..','..','..','..','acustica','raytracing')])
 	env.Append(LIBPATH=[os.path.join('..','..','..','..','acustica','raytracing')])
+	env.Append(LIBS=['raytracing',"GL","GLU","lo"])
+elif env['raytracing']=='convergent' :
+	print 'linking with convergent raytracing'
+	env.Append(CPPPATH=[os.path.join('..','..','..','..','acustica','raytracing_convergence')])
+	env.Append(LIBPATH=[os.path.join('..','..','..','..','acustica','raytracing_convergence')])
 	env.Append(LIBS=['raytracing',"GL","GLU","lo"])
 else :
 	sources.remove(os.path.join('src','RoomImpulseResponseSimulator.cxx'))
