--- a/trunk/CLAM/plugins/spacialization/SConstruct
+++ b/trunk/CLAM/plugins/spacialization/SConstruct
@@ -15,8 +15,8 @@ options.Add(PathOption('clam_prefix', 'The prefix where CLAM was installed', '')
 options.Add(PathOption('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', "", validator=PathOption.PathAccept))
 options.Add(PathOption('sandbox_path', 'Path where third party libraries were installed (in windows)', "", validator=PathOption.PathAccept))
 options.Add(BoolOption('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
-options.Add(EnumOption('raytracing', 'Linking with Barcelona Media raytracing (not GPL)', 'convergent',
-	allowed_values= ('convergent', 'traditional') ) )
+options.Add(EnumOption('raytracing', 'Linking with Barcelona Media raytracing (not GPL)', 'none',
+	allowed_values= ('convergent', 'traditional', 'none') ) )
 
 toolChain = 'default'
 if sys.platform == "win32": toolChain = 'mingw'
