--- a/trunk/chordata/debian/control
+++ b/trunk/chordata/debian/control
@@ -2,6 +2,7 @@ Source: clam-chordata
 Section: sound
 Priority: optional
 Maintainer: CLAM Team <developers@clam-project.org>
+Uploaders: David García Garzón <dgarcia_debian@iua.upf.edu>
 Homepage: http://clam-project.org
 Build-Depends: debhelper (>= 5.0.0), scons, libclam-dev, qt4-dev-tools, libqt4-dev, libqt4-dev (<4.4) | libqt4-opengl-dev, docbook-to-man, imagemagick
 Standards-Version: 3.8.0
