--- a/CLAM/debian/control
+++ b/CLAM/debian/control
@@ -2,6 +2,7 @@ Source: clam
 Section: libs
 Priority: optional
 Maintainer: CLAM Team <developers@clam-project.org>
+Uploaders: David García Garzón <dgarcia_debian@iua.upf.edu>
 Build-Depends: debhelper (>= 5.0.0), scons, ladspa-sdk, libxerces-c2-dev, portaudio19-dev, libfftw3-dev | fftw3-dev, libjack-dev, libmad0-dev, libogg-dev, libsndfile1-dev, libvorbis-dev, libid3-3.8.3-dev, libasound2-dev, liblo0-dev, doxygen
 Standards-Version: 3.8.0
 Homepage: http://clam-project.org/
