--- a/CLAM/plugins/debian/control
+++ b/CLAM/plugins/debian/control
@@ -2,6 +2,7 @@ Source: clam-plugins
 Section: sound
 Priority: optional
 Maintainer: CLAM Team <developers@clam-project.org>
+Uploaders: David García Garzón <dgarcia_debian@iua.upf.edu>
 Homepage: http://clam-project.org
 Build-Depends: debhelper (>= 5.0.0), scons, libclam-dev, liblo0-dev
 Standards-Version: 3.8.0
@@ -10,7 +11,6 @@ Package: libclam-plugins
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends} 
 Recommends: clam-networkeditor
-Homepage: http://clam-project.org
 Description: Extension plugins for the CLAM framework
  This package provides several plugins for the CLAM audio library, including:
   * OSC support
