--- a/Voice2MIDI/debian/control
+++ b/Voice2MIDI/debian/control
@@ -1,7 +1,8 @@
 Source: clam-voice2midi
-Section: x11
+Section: sound
 Priority: optional
 Maintainer: CLAM Team <developers@clam-project.org>
+Uploaders: David García Garzón <dgarcia_debian@iua.upf.edu>
 Homepage: http://clam-project.org
 Build-Depends: debhelper (>= 5.0.0), scons, libclam-dev, libqt3-headers, libqt3-mt-dev
 Standards-Version: 3.8.0
