--- a/trunk/CLAM/examples/PluginExamples/VstPluginExample/SConstruct
+++ b/trunk/CLAM/examples/PluginExamples/VstPluginExample/SConstruct
@@ -120,6 +120,7 @@ else :
 plugins = [
 	env.SharedLibrary("CLAMVstPlugin", source = commonSources + [
 		"CLAMVstPlugin.cxx",
+		"VstNetworkExporter.cxx",
 		]),
 #	# A VstGui based plugin would need that
 #	env.SharedLibrary("CLAMVstPlugin", source = commonSources + vstguiSources [
