--- a/Annotator/SConstruct
+++ b/Annotator/SConstruct
@@ -181,23 +181,24 @@ bocaClientSources = [
 	"SimacServicesClient/BocaTaskRunner.cxx",
 ]
 programs += [ env.Program(target="BocaClient", source = bocaClientSources) ]
-"""
-# Jun: added for test
-# to embed Python scripts in C++ code, Python.h needs to be included,
-#TODO: replace the absolute path with an option
-includePaths += ['C:/Python25/include']
-env.Append(LIBPATH=['C:/Python25/libs'])
-env.Prepend(LIBS="python25")
-semwebSources = scanFiles("*.cxx", ["src/SemWebExtractor"])
-semwebSources = filter ( (lambda a : a.rfind( "Test")==-1 ),  semwebSources )
-semwebSources = filter ( (lambda a : a.rfind( "cppunit")==-1 ),  semwebSources )
-pythonlibpath = 'c:/Python25/libs'
-pythonlib = "python25"
-clamlibpath = [os.path.join(env['prefix'],'lib')]
 
-##programs += [ env.Program(target='SemWebExtractor', source = semwebSources, LIBPATH=[clamlibpath,pythonlibpath]) ]  #, LIBPATH=pythonlibpath
-programs += [ env.Program(target='SemWebExtractor', source = semwebSources) ]
-"""
+if False:
+	# Jun: added for test
+	# to embed Python scripts in C++ code, Python.h needs to be included,
+	#TODO: replace the absolute path with an option
+	#includePaths += ['C:/Python25/include']
+	env.AppendUnique(CPPPATH= ['/usr/include/python2.6'])
+	#env.Append(LIBPATH=['C:/Python25/libs'])
+	#env.Prepend(LIBS="python25")
+	env.Prepend(LIBS="python2.6")
+	semwebSources = scanFiles("*.cxx", ["src/SemWebExtractor"])
+	semwebSources = filter ( (lambda a : a.rfind( "Test")==-1 ),  semwebSources )
+	semwebSources = filter ( (lambda a : a.rfind( "cppunit")==-1 ),  semwebSources )
+	clamlibpath = [os.path.join(env['prefix'],'lib')]
+
+	##programs += [ env.Program(target='SemWebExtractor', source = semwebSources, LIBPATH=[clamlibpath,pythonlibpath]) ]  #, LIBPATH=pythonlibpath
+	programs += [ env.Program(target='SemWebExtractor', source = semwebSources) ]
+
 
 
 manpages = glob.glob('resources/man/man1/*.1')
